--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@curveball/session",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Session storage using HTTP cookies",
   "main": "dist/index.js",
   "scripts": {
@@ -55,7 +55,7 @@
     ]
   },
   "dependencies": {
-    "@curveball/core": "^0.6.0",
+    "@curveball/core": ">= 0.7.0 < 1.0.0",
     "cookie": "^0.3.1"
   }
 }
