--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
   },
   "homepage": "https://github.com/curveballjs/session#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.5",
-    "@types/cookie": "^0.3.1",
-    "@types/mocha": "^5.2.3",
-    "@types/node": "^10.10.3",
-    "@types/sinon": "^5.0.1",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
-    "sinon": "^6.3.4",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2"
+    "@types/chai": "^4.1.7",
+    "@types/cookie": "^0.3.2",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.12.0",
+    "@types/sinon": "^7.0.10",
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "nyc": "^13.3.0",
+    "sinon": "^7.3.0",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.4000"
   },
   "types": "dist/",
   "nyc": {
@@ -55,7 +55,7 @@
     ]
   },
   "dependencies": {
-    "@curveball/core": ">= 0.7.0 < 1.0.0",
+    "@curveball/core": "^0.8.1",
     "cookie": "^0.3.1"
   }
 }
