--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "sinon": "^7.4.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "@curveball/core": "^0.9.1"
   },
   "types": "dist/",
   "nyc": {
@@ -55,7 +56,10 @@
     ]
   },
   "dependencies": {
-    "@curveball/core": "^0.9.1",
+
     "cookie": "^0.4.0"
+  },
+  "peerDependencies": {
+    "@curveball/core": "^0.9.1"
   }
 }
