--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
   },
   "homepage": "https://github.com/curveballjs/session#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.3",
+    "@curveball/core": "^0.10.0",
+    "@types/chai": "^4.2.7",
     "@types/cookie": "^0.3.3",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@types/sinon": "^7.0.13",
+    "@types/node": "^10.17.13",
+    "@types/sinon": "^7.5.1",
     "chai": "^4.2.0",
-    "mocha": "^6.2.0",
+    "mocha": "^7.0.0",
     "nyc": "^15.0.0",
     "sinon": "^8.0.2",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "@curveball/core": "^0.9.1"
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   },
   "types": "dist/",
   "nyc": {
@@ -59,6 +59,6 @@
     "cookie": "^0.4.0"
   },
   "peerDependencies": {
-    "@curveball/core": "^0.9.1"
+    "@curveball/core": ">=0.9.1 <1"
   }
 }
