--- a/package.json
+++ b/package.json
@@ -47,19 +47,21 @@
   },
   "homepage": "https://github.com/curveball/session#readme",
   "devDependencies": {
-    "@curveball/core": "^0.10.0",
-    "@types/chai": "^4.2.7",
-    "@types/cookie": "^0.3.3",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^10.17.13",
-    "@types/sinon": "^7.5.1",
+    "@curveball/core": "^0.15.0",
+    "@types/chai": "^4.2.14",
+    "@types/cookie": "^0.4.0",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^12.19.8",
+    "@types/sinon": "^9.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "chai": "^4.2.0",
-    "mocha": "^7.0.0",
-    "nyc": "^15.0.0",
-    "sinon": "^8.1.1",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
-    "typescript": "^3.7.5"
+    "eslint": "^7.15.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "types": "dist/",
   "nyc": {
@@ -68,9 +70,18 @@
     ]
   },
   "dependencies": {
-    "cookie": "^0.4.0"
+    "cookie": "^0.4.1"
   },
   "peerDependencies": {
-    "@curveball/core": ">=0.9.1 <1"
+    "@curveball/core": ">=0.15 <1"
+  },
+  "mocha": {
+    "require": "ts-node/register",
+    "recursive": true,
+    "extension": [
+      "ts",
+      "js",
+      "tsx"
+    ]
   }
 }
