--- a/package.json
+++ b/package.json
@@ -85,6 +85,6 @@
     "exit": true
   },
   "peerDependencies": {
-    "@curveball/kernel": "^0.20.0"
+    "@curveball/kernel": ">=0.20.0 <1"
   }
 }
