--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "cookie": "^0.5.0"
   },
   "peerDependencies": {
-    "@curveball/kernel": ">=0.21.0-beta.11 <1"
+    "@curveball/kernel": ">=0.21.0 <1"
   },
   "devDependencies": {
     "@curveball/bodyparser": "^0.5.0",
