--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.10.0",
   "description": "Session storage using HTTP cookies",
   "type": "module",
-  "exports": {
-    "require": "./cjs/index.js",
-    "import": "./esm/index.js"
-  },
-  "main": "cjs/index.js",
+  "exports": "./dist/index.js",
   "homepage": "https://github.com/curveball/session#readme",
   "bugs": {
     "url": "https://github.com/curveball/session/issues"
@@ -30,7 +26,8 @@
     "lint": "make lint",
     "fix": "make fix",
     "tsc": "tsc",
-    "start": "make start"
+    "start": "make start",
+    "build": "make build"
   },
   "repository": {
     "type": "git",
@@ -40,33 +37,34 @@
     "cookie": "^0.5.0"
   },
   "peerDependencies": {
-    "@curveball/kernel": ">=0.21.0 <1"
+    "@curveball/kernel": "^1"
   },
   "devDependencies": {
-    "@curveball/bodyparser": "^0.6.0",
-    "@curveball/kernel": "^0.21.0",
-    "@curveball/problem": "^0.5.0",
+    "@curveball/bodyparser": "^1.0.0",
+    "@curveball/kernel": "^1.0.0",
+    "@curveball/problem": "^1.0.0",
     "@types/chai": "^4.2.15",
     "@types/cookie": "^0.5.1",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^16.18.12",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "chai": "^4.3.0",
+    "@types/node": "^18.19.8",
+    "@types/sinon": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "chai": "^5.0.0",
     "eslint": "^8.23.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
+    "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">= 16"
+    "node": ">= 18"
   },
   "files": [
     "package.json",
     "README.md",
-    "esm",
-    "cjs",
+    "dist",
     "LICENSE",
     "src"
   ],
@@ -79,8 +77,7 @@
       "ts",
       "js",
       "tsx"
-    ],
-    "exit": true
+    ]
   },
   "nyc": {
     "extension": [
@@ -90,7 +87,7 @@
   "contributors": [
     {
       "name": "Evert Pot",
-      "email": "evert@badgateway.net",
+      "email": "me@evertpot.com",
       "url": "https://evertpot.com"
     },
     {
